--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -3,6 +3,7 @@
 import type { SocialLink } from '@/types';
 import Button from '@/components/shared/Button.astro';
 import classes from '@/data/styles.json';
+import SectionHeader from './SectionHeader.astro';
 
 interface Props {
   socials: SocialLink[];
@@ -19,20 +20,20 @@ const { socials, copyright } = Astro.props;
   >
     <div class={classes.container}>
       <div class="mb-12 flex flex-col items-center text-center">
-        <span class={classes.preHeading}>Get in Touch</span>
-        <h2 class={classes.heading}>Let's work together</h2>
+        <SectionHeader preHeading="Get in Touch" heading={["Let's work together"]} />
         <p class={classes.secondaryText}>
-          I'm currently available for freelance work and open to full-time opportunities. I consider
-          feedback to be a valuable tool for constant improvement and is always welcomed. If you
-          have any questions or just want to say Hello, feel free to drop me a line via
-          shavarsean(at)gmail.com or by using the form .
+          Get in Touch Ready to start a project? I am available for freelance work and full-time
+          roles. If you have a project in mind or want to discuss a potential collaboration, reach
+          out via email or on LinkedIn — I'd love to hear from you.
         </p>
         <div class="flex flex-col items-center gap-6 pt-8">
           <Button style="primary" href="#">
             <i class="fab fa-linkedin mr-3 text-2xl"></i>
             Connect on LinkedIn
           </Button>
-          <Button style="tertiary" href="#"> Or just say hello via email </Button>
+          <Button style="tertiary" href="mailto:shavarsean@gmail.com?subject=Hello%20Sean">
+            Or just say hello via email
+          </Button>
         </div>
       </div>
       <div class="flex flex-col items-center justify-between gap-6 pt-16 md:flex-row">
