--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -13,13 +13,13 @@ interface Props {
 const { socials, copyright } = Astro.props;
 ---
 
-<footer>
+<footer role="contentinfo">
   <section
     class="border-border-secondary bg-background-primary relative overflow-hidden border-t px-6 py-24"
     id="contact"
   >
     <div class={classes.container}>
-      <div class="mb-12 flex flex-col items-center text-center">
+      <div class="mx-auto mb-12 flex max-w-4xl flex-col items-center text-center">
         <SectionHeader preHeading="Get in Touch" heading={["Let's work together"]} />
         <p class={classes.secondaryText}>
           Get in Touch Ready to start a project? I am available for freelance work and full-time
