--- a/src/components/shared/Header.astro
+++ b/src/components/shared/Header.astro
@@ -12,7 +12,11 @@ const { links, socials } = Astro.props;
 const currentPath = Astro.url.pathname;
 ---
 
-<header id="main-header" class="group fixed left-0 right-0 top-4 z-50 transition-all duration-300">
+<header
+  id="main-header"
+  role="banner"
+  class="group fixed left-0 right-0 top-4 z-50 transition-all duration-300"
+>
   <div
     class={`${styles.container} hidden md:flex m-auto items-center justify-between rounded-full py-2 transition-all duration-300 group-[.scrolled]:max-w-4xl group-[.scrolled]:bg-background-navigation group-[.scrolled]:backdrop-blur-xl group-[.scrolled]:shadow-md group-[.scrolled]:border border-border-primary`}
   >
