--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,7 +62,7 @@ const {
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Poppins:wght@300;400;500;600;700&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap"
       rel="stylesheet"
       media="print"
-      onload="this.media='all'"
+      onload="this.onload=null;this.media='all'"
     />
     <noscript>
       <link
@@ -81,7 +81,7 @@ const {
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       rel="stylesheet"
       media="print"
-      onload="this.media='all'"
+      onload="this.onload=null;this.media='all'"
     />
     <noscript>
       <link
@@ -106,13 +106,13 @@ const {
     <!-- Skip to main content for screen readers -->
     <a
       href="#main-content"
-      class="sr-only focus:not-sr-only focus:absolute focus:left-6 focus:top-6 focus:z-50 focus:rounded focus:bg-white focus:px-3 focus:py-2 focus:text-black focus:shadow-lg"
+      class="sr-only focus:not-sr-only focus:absolute focus:left-6 focus:top-6 focus:z-[60] focus:rounded focus:bg-white focus:px-4 focus:py-2 focus:text-black focus:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
     >
       Skip to main content
     </a>
     {showHeader && <Header links={globalData.header} socials={globalData.socials} />}
 
-    <main id="main-content" class:list={['min-h-screen', { 'mt-28': !hasHero }]}>
+    <main id="main-content" role="main" class:list={['min-h-screen', { 'mt-28': !hasHero }]}>
       <Banner
         heading={title}
         description={description}
