--- a/src/components/ThumbnailProject.astro
+++ b/src/components/ThumbnailProject.astro
@@ -32,7 +32,7 @@ const { id, icon, title, shortDescription, tags, githubUrl, liveUrl } = Astro.pr
         >
           {title}
         </h3>
-        <p class="text-secondary-text mb-6 text-sm leading-relaxed dark:text-gray-400">
+        <p class="text-quaternary mb-6 text-sm leading-relaxed dark:text-gray-400">
           {shortDescription}
         </p>
       </a>
