--- a/src/components/ThumbnailWork.astro
+++ b/src/components/ThumbnailWork.astro
@@ -36,7 +36,7 @@ const { title, shortDescription, tags, githubUrl, liveUrl } = Astro.props;
           </h3>
         </div>
       </div>
-      <p class="text-secondary-text mb-6 line-clamp-3 text-sm leading-relaxed dark:text-gray-400">
+      <p class="text-quaternary mb-6 line-clamp-3 text-sm leading-relaxed dark:text-gray-400">
         {shortDescription}
       </p>
       <div class="bg-border-secondary my-4 h-px w-full"></div>
