--- a/src/components/shared/Header.astro
+++ b/src/components/shared/Header.astro
@@ -38,7 +38,7 @@ const currentPath = Astro.url.pathname;
           return (
             <a
               href={link.href}
-              class={`rounded-full px-4 py-1.5 text-sm font-medium text-gray-700 transition-colors hover:bg-white dark:hover:bg-gray-700 dark:text-gray-300${isActive ? ' bg-background-primary' : ' bg-transparent'}`}
+              class={`hover:bg-quaternary hover:text-tertiary rounded-full px-4 py-1.5 text-sm font-medium transition hover:-translate-y-1 ${isActive ? ' bg-primary text-tertiary' : ' bg-transparent'}`}
               target={link.target}
             >
               {link.label}
@@ -50,7 +50,6 @@ const currentPath = Astro.url.pathname;
 
     <!-- Action Buttons -->
     <div class="flex w-[100px] items-center justify-end gap-2">
-      <!-- Desktop Action Icons -->
       <div class="hidden gap-4 pr-2 pt-1 sm:flex">
         {
           socials.map((social: SocialLink) => {
@@ -78,7 +77,7 @@ const currentPath = Astro.url.pathname;
     aria-expanded="false"
   >
     <div
-      class="bg-background-primary ring-background-primary relative flex h-[50px] w-[50px] transform items-center justify-center overflow-hidden rounded-2xl shadow-md ring-0 ring-opacity-30 transition-all duration-200 hover:ring-8"
+      class="bg-tertiary ring-tertiary relative flex h-[50px] w-[50px] transform items-center justify-center overflow-hidden rounded-2xl shadow-md ring-0 ring-opacity-30 transition-all duration-200 hover:ring-8"
     >
       <div
         class="flex h-[20px] w-[20px] origin-center transform flex-col justify-between overflow-hidden transition-all duration-300"
