--- a/src/components/shared/SectionHeader.astro
+++ b/src/components/shared/SectionHeader.astro
@@ -17,7 +17,7 @@ const HeadingTag = headingLevel;
   <HeadingTag class={classes.heading}>
     {
       heading.map((text, index) =>
-        index % 2 === 0 ? <span>{text} </span> : <span class="text-gray-400">{text} </span>
+        index % 2 === 0 ? <span>{text}</span> : <span class="text-quaternary">{text}</span>
       )
     }
   </HeadingTag>
