--- a/src/components/RecentWork.astro
+++ b/src/components/RecentWork.astro
@@ -17,7 +17,7 @@ const projects = projectsData.projects.slice(0, 3); // Show only first 2 project
       </div>
       <div class="flex w-[175px] justify-start md:justify-end">
         <a
-          class="border-primary text-primary hover:border-secondary-text hover:text-secondary-text group inline-flex items-center gap-2 border-b-2 pb-1 font-semibold transition-all dark:border-white dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300"
+          class="border-primary text-primary hover:border-quaternary hover:text-quaternary group inline-flex items-center gap-2 border-b-2 pb-1 font-semibold transition-all dark:border-white dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300"
           href="/projects"
         >
           View All Projects
