--- a/src/components/shared/Banner.astro
+++ b/src/components/shared/Banner.astro
@@ -20,14 +20,14 @@ const { preheading, heading, description, heroImage, heroLayout = 'standard' } =
   heroLayout === 'hero' && heroImage ? (
     <section class="relative flex items-center overflow-hidden pb-24 pt-6" id="hero">
       <div
-        class={`${styles.container} flex w-full flex-row-reverse items-center gap-8 lg:flex-row`}
+        class={`${styles.container} flex w-full flex-col-reverse items-center gap-8 md:flex-row-reverse lg:flex-row`}
       >
-        <div class="w-2/3">
+        <div class="w-full md:w-3/5">
           <div class="max-w-xl">
             <SectionHeader
               headingLevel="h1"
               preHeading="Senior Frontend Developer"
-              heading={['Shavar Sean', 'Cox']}
+              heading={['Shavar ', 'Sean Cox']}
             />
             <p class={styles.secondaryText}>
               With over 8 years of experience, I specialize in building accessible, high-performance
@@ -45,9 +45,9 @@ const { preheading, heading, description, heroImage, heroLayout = 'standard' } =
             </Button>
           </div>
         </div>
-        <div class="relative flex w-1/3 justify-center lg:justify-end">
-          <div class="absolute inset-0 rotate-3 rounded-2xl bg-gradient-to-tr from-zinc-200 to-transparent transition-transform duration-500 group-hover:rotate-6 dark:from-zinc-800" />
-          <div class="absolute inset-0 -rotate-2 rounded-2xl border-2 border-zinc-900 opacity-10 transition-opacity duration-500 group-hover:opacity-20 dark:border-white" />
+        <div class="relative mb-12 flex w-2/3 justify-center md:mb-0 md:w-2/5 lg:justify-end">
+          <div class="absolute inset-0 translate-y-4 rotate-6 rounded-2xl bg-gradient-to-tr from-zinc-200 to-transparent transition-transform duration-500 group-hover:rotate-6 dark:from-zinc-800" />
+          <div class="absolute inset-0 translate-y-4 -rotate-2 rounded-2xl border-2 border-zinc-900 opacity-10 transition-opacity duration-500 group-hover:opacity-20 dark:border-white" />
           <Image
             src={heroImage}
             alt="Portrait of Shavar"
@@ -69,12 +69,12 @@ const { preheading, heading, description, heroImage, heroLayout = 'standard' } =
             alt="Background"
             class="absolute inset-0 -z-10 h-full w-full object-cover"
           />
-          <div class="bg-background-primary absolute inset-0 opacity-15" />
+          <div class="bg-tertiary absolute inset-0 opacity-15" />
         </>
       )}
 
-      <div class:list={[styles.container, { 'pt-64': heroImage }, 'pb-8']}>
-        <div class="flex flex-col items-start border-b border-zinc-200 pb-6 text-left dark:border-zinc-800">
+      <div class:list={[styles.container, { 'pt-64': heroImage }, 'pb-0']}>
+        <div class="border-border-secondary flex flex-col items-start border-b pb-12 text-left">
           {preheading && <span class={styles.preHeading}>{preheading}</span>}
           <h1 class={styles.heading}>{heading}</h1>
           <p class={styles.subHeading}>{description}</p>
