--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -15,7 +15,7 @@ const { socials, copyright } = Astro.props;
 
 <footer role="contentinfo">
   <section
-    class="border-border-secondary bg-background-primary relative overflow-hidden border-t px-6 py-24"
+    class="border-border-secondary relative overflow-hidden border-t px-6 py-24"
     id="contact"
   >
     <div class={classes.container}>
