--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -46,7 +46,7 @@ const { socials, copyright } = Astro.props;
               return (
                 <a
                   aria-label={social.label}
-                  class="transition-colors"
+                  class="hover:text-quaternary transition-colors"
                   href={social.href}
                   target={social.target}
                 >
