--- a/src/components/Toolbox.astro
+++ b/src/components/Toolbox.astro
@@ -7,24 +7,24 @@ import styles from '@/data/styles.json';
 
 <section class="bg-secondary pb-24" id="toolbox">
   <div class={styles.container}>
-    <div class="bg-toolbox relative overflow-hidden rounded-xl p-8 !text-white md:p-16">
+    <div class="bg-toolbox relative overflow-hidden rounded-xl p-8 !text-white">
       <div class="relative z-10">
         <div class="mb-12 flex flex-col justify-between gap-8 md:flex-row md:items-end">
           <div>
             <SectionHeader
-              preHeading="My toolbox"
+              preHeading="Tech Stack"
               headingLevel="h2"
               heading={['My Toolbox']}
-              subHeading="The technologies and tools I use to bring digital products to life."
+              subHeading="A curated collection of modern tech I use to build fast, accessible, and scalable products."
             />
           </div>
-          <div class="flex gap-2">
+          <div class="mb-2 hidden gap-2 md:flex">
             <div class="h-3 w-3 rounded-full bg-red-500"></div>
             <div class="h-3 w-3 rounded-full bg-yellow-500"></div>
             <div class="h-3 w-3 rounded-full bg-green-500"></div>
           </div>
         </div>
-        <div class="grid grid-cols-2 gap-4 sm:grid-cols-4 md:grid-cols-6">
+        <div class="grid grid-cols-2 gap-4 sm:grid-cols-4 md:grid-cols-5">
           {toolbox.map((tool) => <Tool name={tool.name} icon={tool.icon} />)}
         </div>
       </div>
