--- a/src/components/shared/Header.astro
+++ b/src/components/shared/Header.astro
@@ -56,7 +56,7 @@ const currentPath = Astro.url.pathname;
             return (
               <a
                 aria-label={social.label}
-                class="transition-colors"
+                class="hover:text-quaternary transition-colors"
                 href={social.href}
                 target={social.target}
               >
