--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -37,7 +37,7 @@ const { socials, copyright } = Astro.props;
         </div>
       </div>
       <div class="flex flex-col items-center justify-between gap-6 pt-16 md:flex-row">
-        <p class="order-2 text-xs text-gray-400 md:order-1">
+        <p class="order-2 text-xs md:order-1">
           {copyright}
         </p>
         <div class="order-1 flex gap-6 md:order-2">
