--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -13,7 +13,7 @@ const { icon, title, description, offset } = Astro.props;
   class={`border-border-tertiary bg-card-secondary group rounded-xl border p-6 transition-all space-y-4 hover:-translate-y-1 ${offset ? 'md:mt-12' : ''}`}
 >
   <div
-    class="bg-tertiary flex h-12 w-12 items-center justify-center rounded-xl transition-transform group-hover:scale-110"
+    class="bg-secondary flex h-12 w-12 items-center justify-center rounded-xl transition-transform group-hover:scale-110"
   >
     <span class="material-symbols-outlined">{icon}</span>
   </div>
