--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -134,7 +134,7 @@ const {
     <main
       id="main-content"
       role="main"
-      class:list={showIntro ? ['min-h-screen', { 'mt-28': !hasHero }] : []}
+      class:list={showIntro ? ['min-h-screen', { 'mt-18 md:mt-28': !hasHero }] : []}
     >
       {
         showIntro && (
